--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </a>
                     </div>
                     
-                    <a href="Abhishek_Varshney.pdf" download class="btn btn2">Download CV</a>
+                    <a href="abhishek_Varshney.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                   
