--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                         <ul>
                             <li><span>2020</span><br>Class 10th || 84.6%</li>
                             <li><span>2022</span><br>Class 12th || 80.8%</li>
-                            <li><span>2026</span><br>B.Tech CSE (3rd Year) ||current sgpa-8.805 || University Rank Holder (3 times)<br>4th rank -2nd sem <br>3rd rank -3rd sem <br>6th rank -4th sem </li>
+                            <li><span>current</span><br>B.Tech CSE (3rd Year) ||current sgpa-8.805 || University Rank Holder (3 times)<br>4th rank -2nd sem <br>3rd rank -3rd sem <br>6th rank -4th sem </li>
+                            <li><span>2025</span><br>GATE (CS) qualified</li>
                         </ul>
                     </div>
                     <div class="option-cont" id="extra-curricular">
