--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         </a>
                     </div>
                     
-                    <a href="abhishek_cv.pdf" download class="btn btn2">Download CV</a>
+                    <a href="avcv.pdf" download class="btn btn2">Download CV</a>
                 </div>
                 <div class="contact-right">
                   
